--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,6 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <%# The home_about_path === views home directory about file and _path at the end for convention... In terminal run rails routes, find the prefix section at the top and that is what your link_to path will be %>
         <%= link_to 'About Us', home_about_path, class:"nav-link"%>
       </ul>
       <form class="d-flex">
