--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -5,11 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Twitter</th>
+      <th>First name: </th>
+      <th>Last name: </th>
+      <th>Email: </th>
+      <th>Phone: </th>
+      <th>Twitter: </th>
       <th colspan="3"></th>
     </tr>
   </thead>
