--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Friend</h1>
-
+<h1>Add New Friend</h1>
+<%# This 'form' is coming from _form.html.erb %>
 <%= render 'form', friend: @friend %>
 
 <%= link_to 'Back', friends_path %>
