Added more styling to the form

--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -36,7 +36,8 @@
     <%= form.text_field :twitter, class:"form-control", placeholder:"Twitter" %>
   </div>
 
+<br/>
   <div class="actions">
-    <%= form.submit class:'btn btn-secondary' %>
+    <%= form.submit class:'btn btn-primary' %>
   </div>
 <% end %>
