--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Add New Friend</h1>
+<br/>
 <%# This 'form' is coming from _form.html.erb %>
 <%= render 'form', friend: @friend %>
-
-<%= link_to 'Back', friends_path %>
+<br/>
+<%= link_to 'Back', friends_path, class:"btn btn-dark" %>
