--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,10 @@
 
   <div class="container">
   <br/>
+  <% if notice%>
+    <%= render 'layouts/alerts'%>
+  <% end %>
+  
     <%= yield %>
   </div>
 
