--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -12,29 +12,47 @@
   <% end %>
 
   <div class="field form-group">
-    <%= form.label :first_name %>
+    <% form.label :first_name %>
     <%= form.text_field :first_name, class:"form-control", placeholder:"First Name" %>
   </div>
 
+  <br/>
+
   <div class="field form-group">
-    <%= form.label :last_name %>
+    <% form.label :last_name %>
     <%= form.text_field :last_name, class:"form-control", placeholder:"Last Name" %>
   </div>
 
+  <br/>
+
   <div class="field form-group">
-    <%= form.label :email %>
+    <% form.label :email %>
     <%= form.text_field :email, class:"form-control", placeholder:"E-mail" %>
   </div>
 
+  <br/>
+
   <div class="field form-group">
-    <%= form.label :phone %>
+    <% form.label :phone %>
     <%= form.text_field :phone, class:"form-control", placeholder:"Phone Number" %>
   </div>
 
+  <br/>
+
   <div class="field form-group">
-    <%= form.label :twitter %>
+    <% form.label :twitter %>
     <%= form.text_field :twitter, class:"form-control", placeholder:"Twitter" %>
   </div>
+
+  <br/>
+
+  <div class="field form-group">
+    <% form.label :twitter %>
+    <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value:current_user.id, type: :hidden %>
+  </div>
+
+  <%# <%=current_user.inspect%>
+
 
 <br/>
   <div class="actions">
