--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -4,4 +4,6 @@
 <br/>
 <%= link_to 'Show', @friend, class:"btn btn-secondary" %> 
 
+<%= link_to 'Remove', @friend, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+
 <%= link_to 'Back', friends_path, class:"btn btn-dark" %>
