--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,36 +1,57 @@
-<%= current_user.email%>
-<table class="table table-striped table-bordered table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th>First Name: </th>
-      <th>Last Name: </th>
-      <th>Email: </th>
-      <th>Phone: </th>
-      <th>Twitter: </th>
-      <th>User ID: </th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @friends.each do |friend| %>
-      <% if friend.user == current_user%>
-      <tr>
-        <td><%= friend.first_name %></td>
-        <td><%= friend.last_name %></td>
-        <td><%= friend.email %></td>
-        <td><%= friend.phone %></td>
-        <td><%= friend.twitter %></td>
-        <td><%= friend.user_id %></td>
-        <td><%= link_to 'Show', friend %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-        <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      <%end%>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+<%if user_signed_in?%>
 
-<%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
+    <%= current_user.email%>
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th>Name:</th>
+          <th>Email:</th>
+          <th>Phone:</th>
+          <th>Twitter:</th>
+          <th>User ID:</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @friends.each do |friend| %>
+          <% if friend.user == current_user%>
+          <tr>
+            <td>
+              <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
+            </td>
+            <td>
+              <%= friend.email %>
+            </td>
+            <td>
+              <%= friend.phone %>
+            </td>
+            <td>
+              <%= friend.twitter %>
+            </td>
+            <td>
+              <%= friend.user_id %>
+            </td>
+            <%# <td> %>
+              <% link_to 'Edit', edit_friend_path(friend) %>
+            <%# </td> %>
+            <td>
+              <%= link_to 'Remove', friend, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger btn-sm" %>
+            </td>
+          </tr>
+          <%end%>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+
+    <%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
+  <%else%>
+
+  <h2>Hello World</h2>
+    <p>This is my first Rails Web Page!</p>
+
+<%end%>
