--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,7 +8,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <%# The home_about_path === views home directory about file and _path at the end for convention... In terminal run rails routes, find the prefix section at the top and that is what your link_to path will be %>
         <li class="nav-item">
-          <%= link_to 'About Us', home_about_path, class:"nav-link"%>
+          <%= link_to 'About Me', home_about_path, class:"nav-link"%>
         </li>   
 
         <% if user_signed_in?%>
