--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -3,8 +3,8 @@
 <%if user_signed_in?%>
 
     <%= current_user.email%>
-    <table class="table table-striped table-bordered table-hover">
-      <thead class="thead-dark">
+    <table class="table table-striped table-bordered table-hover table-dark">
+      <thead>
         <tr>
           <th>Name:</th>
           <th>Email:</th>
